css/stylesheet.css
/*   FONT USED:
font-family: 'Inconsolata', monospace;   -P-
font-family: 'Permanent Marker', cursive; -NAV-
font-family: 'Tapestry', cursive;  -H1/2 ect-
*/

/* GENERAL css*/

body {
    width:100%;
    margin:0;
    overflow-x:hidden;
}
/* HEADER section css*/

#header {
    width:100%;
    position:fixed;
}
img{
    width:100%;
}

.flexcontainer {
    background-color: rgba(115, 187, 229, 0.818);
    padding:15px 0px;
    display:flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.links{
    display:flex; 
}

#header h1{
    font-size: 46px;
    text-shadow: 2px 2px white;
    width:100%;
    margin:0;
    padding-left:10px;
    color: black;
    font-family: 'Tapestry', cursive;
}

#header a {
    text-decoration:none;
    color:black;
    padding-right:30px;
    text-shadow: 1px 1px white;
    font-size:20px;
    font-family: 'Permanent Marker', cursive;
}

#header a:hover {
    transform:scale(1.1);
    color:white;
    text-shadow: 1px 1px black;
}

#header p {
    position: absolute;
    bottom: 0;
}

.hamburger{
    display:none;
}

.hamburger:hover{
    cursor: pointer;
}

.bar {
    display:block;
    width:25px;
    height:3px;
    margin: 5px 20px;
    background-color:white;
}

/*LIFE section css*/

#life {
    background-color: rgba(115, 187, 229, 0.6);
    margin:0;
    text-align:center;
}

#life h2 {
    margin:0;
    padding:1vw 12vw;
    font-family: 'Tapestry', cursive;
    text-shadow: 1px 1px white;
}

#life p {
    padding:1vw 12vw 3vw 12vw;
    font-family: monospace;
    font-size: 18px;
    margin:0;
}

/* INTERVIEWS section css*/

#videos {
    margin:4vw;
}

.video1 {
    grid-area: video;
}
.video1 iframe {
    width:100%;
    height:100%;
}

.video2 {
    grid-area: video2;
}

.video2 iframe {
    width:100%;
    height:100%;
}

.video3 {
    grid-area: video3;
}

.video3 iframe {
    width:100%;
    height:100%;
}

.video4 {
    grid-area: video4;
}

.video4 iframe {
    width:100%;
    height:100%;
}

.grid {
    display:grid;
    grid-template-columns: 400px 400px;
    grid-template-rows: 250px 250px;
    grid-template-areas: 
     'video video2'
     'video3 video4';
     gap:2vw 8vw;
    justify-content: center;
}

/* FAME section css*/

#fame {
    background-color: rgba(115, 187, 229, 0.2);
    margin:0;
    text-align:center;
}

#fame h2 {
    padding:1vw 12vw;
    font-family: 'Tapestry', cursive;
    text-shadow: 1px 1px white;
    margin:0;
}

#fame p {
    padding:1vw 12vw 3vw 12vw;
    font-family: monospace;
    margin:0;
    font-size: 18px;
}

/* LINKS section css*/



#links{
    padding-left: 100px;
}

#links h4{
    width:100%;
    font-size: 20px;
}

#links ul li  {
    list-style-type: none;

}

#links ul a {
    width: 100%;
    color: black;
    font-family: 'Tapestry', cursive;
    font-size: 18px;
}

/* FOOTER section css*/

footer{
    background-color: rgba(115, 187, 229, 0.818);
    margin: 0;
    padding:30px 0;
    width:100%;
}
footer h3 {
    margin:0;
    width: 100%;
    padding: 0.5vw 0 0 0;
    text-align:center;
    color:black;
    padding-right:2vw;
    text-shadow: 1px 1px white;
    font-family: 'Permanent Marker', cursive;
}

footer p {
    margin:0;
    padding:0 0 5px 0;
    font-size: 2vw;
    font-family: 'Inconsolata', monospace; 
    text-align: center;
}

/* MEDIA QUERY */
@media (max-width:941px){

    .flexcontainer {
        background-color: rgb(115, 187, 229);
        width:100%;
        padding:30px 0;
        display:flex;
        flex-direction: row;
        justify-content: space-between;
        align-items: center;
    }

    #header h1{
        font-size: 22px;
        text-shadow: 2px 2px white;
        margin:0;
        padding:0 0 0 20px;
        color: black;
        font-family: 'Tapestry', cursive;
    }

    #header a {
        text-decoration:none;
        color:black;
        text-shadow: 1px 1px white;
        font-size:20px;
        font-family: 'Permanent Marker', cursive;
        padding:30px auto;
    }

    .hamburger {
        display:block;
    }

    .hamburger.active .bar:nth-child(2){
        opacity:0;
    }


    .hamburger.active .bar:nth-child(1){
        transform: translateY(8px) rotate(45deg);
    }


    .hamburger.active .bar:nth-child(3){
        transform: translateY(-8px) rotate(-45deg);
    }

    .grid {
        display:grid;
        grid-template-columns: 180px 180px;
        grid-template-rows: 120px 120px;
        grid-template-areas: 
         'video video2'
         'video3 video4';
         gap:2vw 8vw;
        justify-content: center;
    }

    #life p {
        font-size: 16px;
    }

    #fame p {
        font-size: 16px;
    }


    .links{
        position:fixed;
        left:-150%;
        top:60px;
        gap:0;
        flex-direction: row;
        justify-content: center;
        background-color:  rgb(115, 187, 229);
        width:100%;
        text-align: center;
        padding: 0 ;
        transition: 0.3s;
    }

    .links.active {
        left:0;
        padding:20px 0;
    }

    img{
        margin-top:90px;
    }
}

